add otherPrintings
