# meta/definitions/openapi.yaml
@@ -1536,6 +1536,12 @@ components:
                         type: string
                         description: The foil of the variant (e.g., 'Pokeball', 'MasterBall', etc.)
                         nullable: true
+        otherPrintings:
+          type: [array, null]
+          description: Other printings of the card (card IDs)
+          items:
+            type: string
+          example: ["base1-58", "base2-58"]
         hp:
           type: [number, "null"]
           description: Hit Points (HP) of the Pokemon
